@startuml
left to right direction
skinparam packageStyle rectangle
skinparam shadowing false

database "PocketBase" as PB {
  entity "hotel_reservation_events_03" as pb_events
}

database "MongoDB: hoteldata_hub" as MDB {
  package "Modelo actual implementado" {
    entity "fact_hotel_reservations" as fact_res
    entity "fact_hotel_events" as fact_events
    entity "dim_hotels" as dim_hotels
    entity "dim_destinations" as dim_dest
    entity "dim_visitor_countries" as dim_countries_vis
    entity "dim_sites" as dim_sites
    entity "dim_dates" as dim_dates
    entity "dim_promotions" as dim_promotions
    entity "dim_click_status" as dim_click
    entity "dim_reservation_status" as dim_res_status
    entity "dim_occupancy_profile" as dim_occ
    entity "dim_stay_length_category" as dim_stay
    entity "dim_booking_window_category" as dim_booking
    entity "dim_price_category" as dim_price
  }

  package "Control" {
    entity "etl_executions" as etl_exec
    entity "data_quality_reports" as dq_reports
    entity "rejected_records" as rejected
  }

  package "Documental operativo actual" {
    entity "hotels" as hotels
    entity "locations" as locations
    entity "contacts" as contacts
    entity "websites" as websites
    entity "facilities" as facilities
    entity "attractions" as attractions
    entity "hotel_quality" as hotel_quality
    entity "dataset_container" as dataset_container
    entity "system_catalogs" as system_catalogs
    entity "search_logs" as search_logs
  }

  package "Legado" {
    entity "dim_countries" as dim_countries_legacy
    entity "dim_date" as dim_date_legacy
  }

  package "Modelo futuro planificado" {
    entity "users / roles / permissions" as future_security
    entity "traveler_profiles / preferences" as future_travelers
    entity "hotel_partners / content / policies" as future_partners
    entity "room_inventory_calendar / availability" as future_inventory
    entity "rate_plans / promotions" as future_revenue
    entity "booking_orders / payments / invoices" as future_booking
    entity "pms_connections / webhooks" as future_integrations
    entity "redis_cache_keys / feature_flags" as future_platform
  }
}

pb_events --> fact_res : ETL principal
fact_res --> dim_hotels
fact_res --> dim_dest
fact_res --> dim_countries_vis
fact_res --> dim_sites
fact_res --> dim_dates
fact_res --> dim_promotions
fact_res --> dim_click
fact_res --> dim_res_status
fact_res --> dim_occ
fact_res --> dim_stay
fact_res --> dim_booking
fact_res --> dim_price
fact_res .. etl_exec
fact_res .. dq_reports
fact_res .. rejected
@enduml
